# rust-template

./: Cargo.toml
src/: D.rs  J.rs  M.rs  test.rs
src/templates/: templates.rs
src/templates/data_structure/: fenwick.rs
src/templates/graph/: sssp.rs
src/templates/math/: modint.rs  qpow.rs  ratio.rs
